# StormByte-Multimedia

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml  codeql.yml  doc.yml  jekyll-gh-pages.yml
cmake/: FindFFmpeg.cmake  asan.cmake  force_libvpx.py  install.cmake  meson.cmake  optimizations.cmake
doc/: CMakeLists.txt
lib/: CMakeLists.txt
lib/advanced/StormByte/multimedia/ffmpeg/: AVBSF.cxx  AVBSF.hxx  AVBSFPipeline.cxx  AVBSFPipeline.hxx  AVCodecParameters.cxx  AVCodecParameters.hxx  AVDecoder.cxx  AVDecoder.hxx  AVEncoder.cxx  AVEncoder.hxx  AVFormatContext.cxx  AVFormatContext.hxx  AVFrame.cxx  AVFrame.hxx  AVPacket.cxx  AVPacket.hxx  AVPointer.hxx  AVStream.cxx  AVStream.hxx  exception.hxx  typedefs.hxx
lib/multimedia/: codec.hxx  container.cxx  container.hxx  exception.cxx  exception.hxx  file.cxx  file.hxx  stream.cxx  stream.hxx  type.hxx  visibility.h
lib/multimedia/codec/: audio.cxx  audio.hxx  base.cxx  base.hxx  codec.cxx  codec.hxx  image.cxx  image.hxx  name.hxx  subtitle.cxx  subtitle.hxx  video.cxx  video.hxx
lib/multimedia/codec/audio/: base.cxx  base.hxx  eac3.cxx  eac3.hxx
lib/multimedia/codec/image/: base.cxx  base.hxx
lib/multimedia/codec/subtitle/: base.cxx  base.hxx
lib/multimedia/codec/video/: base.cxx  base.hxx
lib/multimedia/container/: alias.hxx  avi.cxx  avi.hxx  base.cxx  base.hxx  container.cxx  container.hxx  flac.cxx  flac.hxx  matroska.cxx  matroska.hxx  mp3.cxx  mp3.hxx  mp4.cxx  mp4.hxx  oga.cxx  oga.hxx  ogg.cxx  ogg.hxx  ogv.cxx  ogv.hxx  opus.cxx  opus.hxx  type.hxx  unknown.cxx  unknown.hxx  wav.cxx  wav.hxx  webm.cxx  webm.hxx
lib/multimedia/media/: codec.cxx  codec.hxx  color.hxx  container.cxx  container.hxx  duration.cxx  duration.hxx  hdr10.cxx  hdr10.hxx  type.hxx
lib/multimedia/property/: color.cxx  color.hxx  duration.cxx  duration.hxx  hdr10.cxx  hdr10.hxx  language.hxx  resolution.cxx  resolution.hxx  size.cxx  size.hxx  type.hxx
lib/multimedia/stream/: attachment.cxx  attachment.hxx  audio.cxx  audio.hxx  base.cxx  base.hxx  image.cxx  image.hxx  stream.cxx  stream.hxx  subtitle.cxx  subtitle.hxx  video.cxx  video.hxx
lib/private/StormByte/multimedia/: ffmpeg_pointers.hxx
lib/private/StormByte/multimedia/engine/: implementation.cxx.in
lib/private/StormByte/multimedia/engine/backend/: demuxer.hxx  typedefs.hxx
lib/private/StormByte/multimedia/engine/backend/ffmpeg/: AVBSF.cxx  AVBSF.hxx  AVBSFPipeline.cxx  AVBSFPipeline.hxx  AVCodecParameters.cxx  AVCodecParameters.hxx  AVDecoder.cxx  AVDecoder.hxx  AVEncoder.cxx  AVEncoder.hxx  AVFormatContext.cxx  AVFormatContext.hxx  AVFrame.cxx  AVFrame.hxx  AVPacket.cxx  AVPacket.hxx  AVPointer.hxx  AVStream.cxx  AVStream.hxx  demuxer.cxx  demuxer.hxx  exception.hxx  typedefs.hxx
lib/private/StormByte/multimedia/ffmpeg/: AVBSF.cxx  AVBSF.hxx  AVBSFPipeline.cxx  AVBSFPipeline.hxx  AVCodecParameters.cxx  AVCodecParameters.hxx  AVDecoder.cxx  AVDecoder.hxx  AVEncoder.cxx  AVEncoder.hxx  AVFormatContext.cxx  AVFormatContext.hxx  AVFrame.cxx  AVFrame.hxx  AVPacket.cxx  AVPacket.hxx  AVStream.cxx  AVStream.hxx  exception.hxx  typedefs.hxx
lib/private/StormByte/multimedia/registry/: codec.hxx  decoder.hxx  encoder.hxx
lib/private/StormByte/multimedia/registry/entry/: codec.hxx  implementation.hxx
lib/public/StormByte/multimedia/: codec.cxx  codec.hxx  container.cxx  container.hxx  decoder.cxx  decoder.hxx  encoder.cxx  encoder.hxx  exception.cxx  exception.hxx  feature.hxx  features.cxx  features.hxx  file.cxx  file.hxx  metadata.hxx  stream.cxx  stream.hxx  type.hxx  typedefs.hxx  visibility.h
lib/public/StormByte/multimedia/context/: audio.cxx  audio.hxx  generic.hxx  video.cxx  video.hxx
lib/public/StormByte/multimedia/context/property/: color.cxx  color.hxx  hdr10.cxx  hdr10.hxx  point.cxx  point.hxx  resolution.cxx  resolution.hxx
lib/public/StormByte/multimedia/engine/: codec.cxx  codec.hxx  decoder.cxx  decoder.hxx  demuxer.cxx  demuxer.hxx  encoder.cxx  encoder.hxx  exception.hxx  implementation.hxx  stream.cxx  stream.hxx  streams.hxx  typedefs.hxx
lib/public/StormByte/multimedia/media/: codec.cxx  codec.hxx  color.cxx  color.hxx  container.cxx  container.hxx  duration.cxx  duration.hxx  hdr10.cxx  hdr10.hxx  language.hxx  registry.cxx  registry.hxx  resolution.cxx  resolution.hxx  sample.cxx  sample.hxx  size.cxx  size.hxx  tags.cxx  tags.hxx  type.cxx  type.hxx
lib/public/StormByte/multimedia/media/property/: duration.cxx  duration.hxx  flags.cxx  flags.hxx  resolution.cxx  resolution.hxx  size.cxx  size.hxx  tags.cxx  tags.hxx
lib/public/StormByte/multimedia/media/property/audio/: channels.cxx  channels.hxx  sample.cxx  sample.hxx
lib/public/StormByte/multimedia/media/property/video/: color.cxx  color.hxx  hdr10.cxx  hdr10.hxx
lib/public/StormByte/multimedia/stream/: attachment.cxx  attachment.hxx  audio.cxx  audio.hxx  base.cxx  base.hxx  image.cxx  image.hxx  subtitle.cxx  subtitle.hxx  video.cxx  video.hxx
lib/public/multimedia/: container.cxx  container.hxx  exception.cxx  exception.hxx
lib/public/multimedia/media/: codec.hxx  color.cxx  container.cxx  container.hxx  language.hxx  resolution.cxx  resolution.hxx  size.cxx  size.hxx  type.hxx
lib/public/multimedia/stream/: attachment.cxx  attachment.hxx  audio.hxx  base.cxx  base.hxx  subtitle.hxx  video.cxx
test/: CMakeLists.txt  container_tests.cxx  file_tests.cxx  test.cxx  test_with_params.cxx
test/files/: testHDR10+.mkv
